[gd_scene load_steps=3 format=3 uid="uid://k8bhe4qimiob"]

[ext_resource type="Script" uid="uid://c53pkn8fsqd88" path="res://Scenes/artifact_detail_scene.gd" id="2_xcndu"]
[ext_resource type="PackedScene" uid="uid://ndfu2mntb27c" path="res://Scenes/artifact_preview.tscn" id="3_6n48t"]

[node name="ArtifactDetailScene" type="Control"]
custom_minimum_size = Vector2(2560, 1440)
layout_mode = 3
anchors_preset = 0
offset_right = 2560.0
offset_bottom = 1440.0
script = ExtResource("2_xcndu")

[node name="PauseBackground2" type="Panel" parent="."]
layout_mode = 0
offset_right = 2560.0
offset_bottom = 1440.0

[node name="StatPreviewPanel" type="Panel" parent="."]
visible = false
layout_mode = 0
offset_left = 919.0
offset_top = 5.0
offset_right = 1232.0
offset_bottom = 266.0

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_top = 0.391
anchor_right = 0.953
anchor_bottom = 0.962
offset_left = 50.0
offset_top = -56.04
offset_right = 60.3201
offset_bottom = 35.72

[node name="SearchBar" type="LineEdit" parent="VBoxContainer"]
layout_mode = 2
placeholder_text = "Search for artifacts..."
alignment = 1

[node name="ArtifactHeaderRow" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 0

[node name="NameButton" type="Button" parent="VBoxContainer/ArtifactHeaderRow"]
custom_minimum_size = Vector2(300, 0)
layout_mode = 2
text = "Name"

[node name="TypeButton" type="Button" parent="VBoxContainer/ArtifactHeaderRow"]
custom_minimum_size = Vector2(275, 0)
layout_mode = 2
text = "Type"

[node name="Stat1Button" type="Button" parent="VBoxContainer/ArtifactHeaderRow"]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
theme_override_font_sizes/font_size = 25
text = "Stat 1"

[node name="Stat1ValueButton" type="Button" parent="VBoxContainer/ArtifactHeaderRow"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
theme_override_font_sizes/font_size = 25
text = "Stat 1 
Value"

[node name="Stat2Button" type="Button" parent="VBoxContainer/ArtifactHeaderRow"]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
theme_override_font_sizes/font_size = 25
text = "Stat 2"

[node name="Stat2ValueButton" type="Button" parent="VBoxContainer/ArtifactHeaderRow"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
theme_override_font_sizes/font_size = 25
text = "Stat 2 
Value"

[node name="2PieceSetButton" type="Button" parent="VBoxContainer/ArtifactHeaderRow"]
custom_minimum_size = Vector2(490, 0)
layout_mode = 2
theme_override_font_sizes/font_size = 25
text = "2-Piece Set Bonus"

[node name="4PieceSetButton" type="Button" parent="VBoxContainer/ArtifactHeaderRow"]
custom_minimum_size = Vector2(490, 0)
layout_mode = 2
theme_override_font_sizes/font_size = 25
text = "4-Piece Set Bonus"

[node name="EquippedButton" type="Button" parent="VBoxContainer/ArtifactHeaderRow"]
custom_minimum_size = Vector2(229, 0)
layout_mode = 2
theme_override_font_sizes/font_size = 25
text = "Equipped"

[node name="ArtifactListContainer" type="ScrollContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
horizontal_scroll_mode = 0

[node name="ArtifactListContainer" type="VBoxContainer" parent="VBoxContainer/ArtifactListContainer"]
layout_mode = 2

[node name="ConfirmButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Confirm"

[node name="ExitButton" type="Button" parent="."]
custom_minimum_size = Vector2(50, 50)
layout_mode = 1
anchors_preset = -1
anchor_left = 0.955
anchor_top = 0.03
anchor_right = 0.981
anchor_bottom = 0.083
offset_left = 52.2
offset_top = -31.2
offset_right = 71.9915
offset_bottom = -6.83364
grow_horizontal = 0
scale = Vector2(0.6, 0.6)
text = "X"
icon_alignment = 1

[node name="Error Label" type="Label" parent="."]
layout_mode = 0
offset_left = 39.0
offset_top = 459.0
offset_right = 2480.0
offset_bottom = 499.0
theme_override_colors/font_color = Color(1, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 20
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 2

[node name="SearchDebounce" type="Timer" parent="."]

[node name="CurrentArtifactPreview" parent="." instance=ExtResource("3_6n48t")]
layout_mode = 0
offset_left = 20.4082
offset_top = 18.7075
offset_right = 1396.41
offset_bottom = 498.707
scale = Vector2(0.9, 0.9)

[node name="SelectedArtifactPreview" parent="." instance=ExtResource("3_6n48t")]
layout_mode = 0
offset_left = 1258.0
offset_top = 20.0
offset_right = 2634.0
offset_bottom = 500.0
scale = Vector2(0.9, 0.9)

[connection signal="pressed" from="VBoxContainer/ConfirmButton" to="." method="_on_confirm_button_pressed"]
[connection signal="pressed" from="ExitButton" to="." method="_on_exit_button_pressed"]
